--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: braus # you probably want to 'snapcraft register <name>'
 base: core20 # the base snap is the execution environment for this snap
-version: '0.2' # just for humans, typically '1.2+git' or '1.3.2'
+version: '0.4' # just for humans, typically '1.2+git' or '1.3.2'
 summary: A small application to select a browser every time you click a link anywhere
 description: |
   A small application to select a browser every time you click a link anywhere. This is especially useful if you have multiple browsers or profiles, and you want to be able to open certain links in certain browsers. Very useful for web developers, but also for a lot of other people.
@@ -15,7 +15,6 @@ architectures:
 parts:
   braus:
     source: https://github.com/thecodejedi/braus.git
-    source-type: git
     # See 'snapcraft plugins'
     plugin: meson
     meson-parameters: [ --prefix=/usr ]
@@ -23,14 +22,20 @@ parts:
       - python3
       - python3-distutils
       - desktop-file-utils
+      - libglib2.0-dev
       - appstream-util
       - gsettings-desktop-schemas-dev
       - gettext
+      - libgtk-3-dev
     stage-packages:
       - python3-gi
       - python3-gi-cairo
+      - gir1.2-gtk-3.0
     
 apps:
   braus:
     command: usr/bin/braus
     desktop: usr/share/applications/com.properlypurple.braus.desktop
+    plugs:
+        - gsettings
+        - browser-support
