--- a/src/braus.in
+++ b/src/braus.in
@@ -22,9 +22,17 @@ import sys
 import signal
 import gettext
 
-VERSION = '@VERSION@'
-pkgdatadir = '@pkgdatadir@'
-localedir = '@localedir@'
+if "SNAP" in os.environ:
+	SNAP = os.environ["SNAP"]
+	VERSION = "0.3.0"
+	pkgdatadir = "usr/share/braus"
+	localedir = "usr/share/locale"
+	sys.path.insert(1, f"{SNAP}/{pkgdatadir}")
+else:
+	VERSION = "@VERSION@"
+	pkgdatadir = "@pkgdatadir@"
+	localedir = "@localedir@"
+	sys.path.insert(1, pkgdatadir)
 
 sys.path.insert(1, pkgdatadir)
 signal.signal(signal.SIGINT, signal.SIG_DFL)
@@ -32,8 +40,7 @@ gettext.install('braus', localedir)
 
 if __name__ == '__main__':
     import gi
-
-
+    gi.require_version('Gtk', '3.0')
 
     from braus import main
     sys.exit(main.main(VERSION))
