--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,12 +1,13 @@
 name: braus # you probably want to 'snapcraft register <name>'
 base: core20 # the base snap is the execution environment for this snap
-version: '0.4' # just for humans, typically '1.2+git' or '1.3.2'
+version: '0.5' # just for humans, typically '1.2+git' or '1.3.2'
 summary: A small application to select a browser every time you click a link anywhere
 description: |
   A small application to select a browser every time you click a link anywhere. This is especially useful if you have multiple browsers or profiles, and you want to be able to open certain links in certain browsers. Very useful for web developers, but also for a lot of other people.
 
+license: GPL-3.0+
 grade: stable # must be 'stable' to release into candidate/stable channels
-confinement: classic # use 'strict' once you have the right plugs and slots
+confinement: strict # use 'strict' once you have the right plugs and slots
 
 architectures:
   - build-on: [amd64, armhf]
@@ -17,23 +18,27 @@ parts:
     source: https://github.com/thecodejedi/braus.git
     # See 'snapcraft plugins'
     plugin: meson
-    meson-parameters: [ --prefix=/usr ]
+    meson-parameters: [--prefix=/snap/braus/current/usr]
     build-packages:
-      - python3
-      - python3-distutils
-      - desktop-file-utils
-      - libglib2.0-dev
-      - appstream-util
-      - gsettings-desktop-schemas-dev
       - gettext
-      - libcanberra-dev
-      - libgtk-3-dev
-    stage-packages:
-      - python3-gi
-      - python3-gi-cairo
-      - gir1.2-gtk-3.0
-    
+    organize:
+      snap/braus/current/usr: usr
+
 apps:
   braus:
     command: usr/bin/braus
     desktop: usr/share/applications/com.properlypurple.braus.desktop
+    extensions: [gnome-3-38]
+    plugs:
+        - desktop
+        - gsettings
+        - browser-support
+    slots:
+      - dbus-daemon
+    common-id: com.properlypurple.braus
+
+slots:
+  dbus-daemon:
+    interface: dbus
+    bus: session
+    name: com.properlypurple.braus
